--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ top: 232px;
 background: #FFDC40;
 
 }
-.one{
+.aysun{
     /* To-do list */
 
 position: absolute;
@@ -30,10 +30,8 @@ text-transform: capitalize;
 color: #000000;
 
 
-
 }
-
-.two{
+.six{
     /* Rectangle 31 */
 
 box-sizing: border-box;
@@ -48,7 +46,7 @@ border: 1px solid #C4C4C4;
 border-radius: 10px;
 
 }
-.three{
+.one{
     /* Rectangle 28 */
 
 box-sizing: border-box;
@@ -63,7 +61,7 @@ border: 1px solid #C4C4C4;
 border-radius: 71px;
 
 }
-.four{
+.two{
     /* Group 34 */
 
 position: absolute;
@@ -71,8 +69,12 @@ width: 25px;
 height: 15px;
 left: 689px;
 top: 323px;
+
+
+
+
 }
-.five{
+.three{
     /* Group 52 */
 
 position: absolute;
@@ -83,10 +85,11 @@ top: 365px;
 
 
 
+/* Vector 2 */
 
 
 }
-.six{
+.four{
     /* Rectangle 31 */
 
 box-sizing: border-box;
@@ -101,18 +104,14 @@ border: 1px solid #C4C4C4;
 border-radius: 10px;
 
 }
-
-.seven{
-    /* Group 41 */
+.five{
+ /* Group 41 */
 
 position: absolute;
 width: 150px;
 height: 42px;
 left: 500px;
-top: 407px;
-
-
-
+top: 417px;
 
 
 
@@ -122,7 +121,6 @@ top: 407px;
 
 
 }
-
 
 
 
