javasi yarimciq hazirdi

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,126 +1,66 @@
-.zero{
-    /* Rectangle 32 */
+body {
+    margin-top: 30%;
+    margin: 155px;
+}
 
-position: absolute;
-width: 336px;
-height: 28px;
-left: 408px;
-top: 232px;
-
-background: #FFDC40;
+.one {
+    border: 1px solid #c4c4c4;
+    border-radius: 10px;
+    width: 30%;
+    margin: auto;
+    min-height: 250px;
 
 }
-.aysun{
-    /* To-do list */
 
-position: absolute;
-width: 198px;
-height: 34px;
-left: 477px;
-top: 273px;
+.two{
+    background-color: yellow;
+    width: 355px;
+    height: 20px;
+    border-radius: 9px;
+}
 
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 900;
-font-size: 26px;
-line-height: 30px;
-text-align: center;
-text-transform: capitalize;
+.addBtn {
+    height: 22px;
+    border-radius: 70px;
+    background-color: #9953f1 ;
+    width: 40%;
+    margin: auto;
 
-color: #000000;
+}
+
+.hisse5 {
+    margin-left: 100px;
+    margin-bottom: 20px;
+}
+
+.hisse2 {
+    margin-left: 100px;
+    margin-bottom: 20px;
+    border: 1px solid #C4C4C4;
+    border-radius: 10px;
+}
 
 
+
+h2 {
+    font-size: 30px;
+    margin: 50px;
+}
+
+.four {
+    margin-left: 95px;
 }
 .six{
-    /* Rectangle 31 */
-
-box-sizing: border-box;
-
-position: absolute;
-width: 286px;
-height: 40px;
-left: 436px;
-top: 349px;
-
-border: 1px solid #C4C4C4;
-border-radius: 10px;
-
+    background-color: #9953f1 ;
+    border-radius: 70px;
+    
 }
-.one{
-    /* Rectangle 28 */
-
-box-sizing: border-box;
-
-position: absolute;
-width: 20px;
-height: 20px;
-left: 672px;
-top: 359px;
-
-border: 1px solid #C4C4C4;
-border-radius: 71px;
-
-}
-.two{
-    /* Group 34 */
-
-position: absolute;
-width: 25px;
-height: 15px;
-left: 689px;
-top: 323px;
-
-
-
-
-}
-.three{
-    /* Group 52 */
-
-position: absolute;
-width: 8px;
-height: 8px;
-left: 678px;
-top: 365px;
-
-
-
-/* Vector 2 */
-
-
-}
-.four{
-    /* Rectangle 31 */
-
-box-sizing: border-box;
-
-position: absolute;
-width: 336px;
-height: 236px;
-left: 408px;
-top: 232px;
-
-border: 1px solid #C4C4C4;
-border-radius: 10px;
-
-}
-.five{
- /* Group 41 */
-
-position: absolute;
-width: 150px;
-height: 42px;
-left: 500px;
-top: 417px;
 
 
 
 
 
 
-
-
-}
 
 
 
