--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,157 +1,153 @@
-html{
-    font-size: 62.5%;
-}
-body{
-    
-    background: rgb(131,58,180);
-background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(242,112,112,1) 66%, rgba(252,176,69,1) 100%);
-}
-.wrapper{
-    position: absolute;
-    left: 50%;
-    top: 20%;
-    transform: translate(-50%);
-}
-.container{
-    box-shadow: 12px 12px 2px 1px rgba(51, 51, 51, 0.2);
-    position:relative;
-    width: 100rem;
-    min-height: 75em;
-    background-color: white;
-    border: 1px solid gray;
-    border-radius: 30px;    
-}
-.yellow{
-    position: absolute;
-    background-color: #FFDC40;
-    width: 100%;
-    height: 11em;
-    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
-}
-.heading{
-    position: relative;
-}
-.heading-text{
-    position: relative;
-    color: black;
-    left: 50%;
-    transform: translate(-23%);
-    top: .6em;
-    font-size: 10em;
-}
-.text-area{box-shadow: 4px 4px 2px 1px rgba(51, 51, 51, 0.2);
-    position: relative;
-    border-radius: 20px;
-    border: 3px solid gray;
-    width: 80%;
-    height: 10em;
-    left: 10%;
-    top: 10em;
-}
-.input-text{
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
     height: 100%;
-    width: 98%;
-    border-radius: 20px;
-    border: none;
-    font-size: 6em;
-    padding-left: .3em;
-}
-.img-x{
-    top: -100%;
-    position: relative;
-    left: 87.5%;
-    width: 10em;
-    height: 10em;
-}
-.sortup{
-position: relative;
-width: 8em;
-left: 80%;
-top: 8em;
-display: none;
-}
-.sortdown{
-    opacity: 40%;
-    position: relative;
-    width: 8em;
-    left: 80%;
-    top: 8em;      
-}
-.sortdown:hover{
-    opacity: 100%;
-    cursor: pointer;
-}
-.img-x:hover{
-cursor: pointer;
-}
-.addbtn{
-    margin-bottom: 3em;
-    top: 3em;
-    left: 32%;
-    position: relative;
-    width: 7em;
-    height: 2em;
-    font-size: 5em;
+    background: white;
+  }
+  
+  h1 {
+    font-family: "Roboto";
+    font-style: normal;
     font-weight: 900;
-    color: white;
-    border: none;
-    background-color: #833AE0;
-    border-radius: 30px;
-}
-.addbtn:hover{
-    background-color: white;
-    color:#833AE0;
-    cursor: pointer;
-    outline: #FFDC40;
-    transition: 0.3s;
-    outline-style: solid;
-}
-.todos{
-    
-    padding-left: 10em;
-}
-.todo-item-container{
-    
-    align-items: center;
+    font-size: 26px;
+    line-height: 30px;
+    text-align: center;
+    text-transform: capitalize;
+    color: #000000;
+  }
+  
+  .mainContainer {
+    padding-top: 50px;
+    width: 450px;
+    margin: 50px auto;
+    border: 1px solid #c4c4c4;
+    border-top: 30px solid #ffdc40;
+    border-radius: 10px;
+    height: 500px;
+  }
+  
+  .input_div {
     display: flex;
-    margin-bottom: 5px;
-}
-#todo-text{
-    
-    width: 70%;
-    font-size: 5em;
-    letter-spacing: 1.5px;
-}
-#edit{
-    border-radius: 20px;
-    width: 6em;
-    margin-right: 1em;
-    height: 5rem;
-    background-color: #833AE0;
-    opacity: 0.6;
-    padding: 5px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 20px auto;
+    width: 80%;
+    border: 1px solid #c4c4c4;
+    border-radius: 10px;
+  }
+  
+  .input_div .input {
+    padding: 0.5rem 1rem;
+    height: 50px;
+    outline: none;
     border: none;
-}
-#delete{
-    border-radius: 20px;
-    width: 10em;
-    height: 5rem;
-    max-height: 10em;
-    background-color: red;
-    opacity: 0.6;
-    padding: 5px;
+    background-color: #ffff;
+    width: 450px;
+    font-size: 1.15rem;
+    margin: 0.25rem;
+    border-radius: 25px;
+  }
+  
+  .buttonContent {
+    margin: 10px auto;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .addButton {
+    display: flex;
+    align-items: center;
+    width: 200px;
+    height: 50px;
+    background: #833ae0;
+    border-radius: 71px;
     border: none;
-}
-#edit:hover{
-    opacity: 1;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #ffffff;
+  }
+  
+  .addButton span:nth-child(1) {
+    background: #9953f1;
+    border-radius: 71px;
+    height: 50px;
+    width: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 20px;
+  }
+  
+  .addButton:hover {
+    opacity: 0.7;
+  }
+  
+  .container {
+    margin: 20px auto;
+    width: 80%;
+    height: 200px;
+    border: 1px solid #c4c4c4;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 2rem;
+    overflow-y: scroll;
+  }
+  
+  .item {
+    width: 80%;
+    padding: 0.5rem;
+    margin-right: 20px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .item_input {
+    background: none;
+    outline: none;
+    color: black;
+    border: none;
+    width: 350px;
+    font-size: 1.4rem;
+  }
+  
+  .removeButton {
+    padding: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    font-size: 12px;
+    border: 1px solid #c4c4c4;
+    color: #c4c4c4;
+    background: none;
     cursor: pointer;
-}
-#delete:hover{
-    opacity: 1;rjh4rhf
-    cursor: pointer;
-}
-
+    transition: 0.8s;
+    border-radius: 50%;
+  }
+  
+  .removeButton:hover {
+    background: #833ae0;
+    color: white;
+  }
+  
+  .plus {
+    font-weight: 800;
+  }
 
 
 
