--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,164 +1,113 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    height: 100%;
-    background: white;
-  }
-  
-  h1 {
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 900;
-    font-size: 26px;
-    line-height: 30px;
-    text-align: center;
-    text-transform: capitalize;
-    color: #000000;
-  }
-  
-  .mainContainer {
-    padding-top: 50px;
-    width: 450px;
-    margin: 50px auto;
-    border: 1px solid #c4c4c4;
-    border-top: 30px solid #ffdc40;
-    border-radius: 10px;
-    height: 500px;
-  }
-  
-  .input_div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin: 20px auto;
-    width: 80%;
-    border: 1px solid #c4c4c4;
-    border-radius: 10px;
-  }
-  
-  .input_div .input {
-    padding: 0.5rem 1rem;
-    height: 50px;
-    outline: none;
-    border: none;
-    background-color: #ffff;
-    width: 450px;
-    font-size: 1.15rem;
-    margin: 0.25rem;
-    border-radius: 25px;
-  }
-  
-  .buttonContent {
-    margin: 10px auto;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .addButton {
-    display: flex;
-    align-items: center;
-    width: 200px;
-    height: 50px;
-    background: #833ae0;
-    border-radius: 71px;
-    border: none;
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    color: #ffffff;
-  }
-  
-  .addButton span:nth-child(1) {
-    background: #9953f1;
-    border-radius: 71px;
-    height: 50px;
-    width: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-right: 20px;
-  }
-  
-  .addButton:hover {
-    opacity: 0.7;
-  }
-  
-  .container {
-    margin: 20px auto;
-    width: 80%;
-    height: 200px;
-    border: 1px solid #c4c4c4;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    margin-top: 2rem;
-    overflow-y: scroll;
-  }
-  
-  .item {
-    width: 80%;
-    padding: 0.5rem;
-    margin-right: 20px;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .item_input {
-    background: none;
-    outline: none;
-    color: black;
-    border: none;
-    width: 350px;
-    font-size: 1.4rem;
-  }
-  
-  .removeButton {
-    padding: 8px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 20px;
-    height: 20px;
-    font-size: 12px;
-    border: 1px solid #c4c4c4;
-    color: #c4c4c4;
-    background: none;
-    cursor: pointer;
-    transition: 0.8s;
-    border-radius: 50%;
-  }
-  
-  .removeButton:hover {
-    background: #833ae0;
-    color: white;
-  }
-  
-  .plus {
-    font-weight: 800;
-  }
+body {
+  margin-top: 30%;
+  margin: 155px;
+}
+li{
+  display: flex;
+  justify-content: space-between;
+}
+ul{
+  padding: 0;
+
+}
+.veb1 {
+  border: 1px solid #c4c4c4;
+  border-radius: 10px;
+  width: 355px;
+  margin: auto;
+  min-height: 250px;
+
+}
+
+.hisse {
+  background-color: yellow;
+  width: 355px;
+  height: 20px;
+  border-radius: 9px 9px  0 0;
+}
+
+.addBtn {
+  height: 22px;
+  border-radius: 70px;
+  background-color: #9953f1 ;
+  width: 30%;
+  margin: auto;
+
+}
+
+.hisse5 {
+  margin-left: 100px;
+  margin-bottom: 20px;
+}
+
+.hisse2 {
+  margin-left: 100px;
+  margin-bottom: 20px;
+  border: 1px solid #C4C4C4;
+  border-radius: 10px;
+
+
+}
 
 
 
+h2 {
+  font-size: 30px;
+  margin: 50px;
+}
+
+.elave {
+  margin-left: 95px;
+  border: 1px solid;
+  width: 175px;
+  border-radius: 5px;
 
 
+}
+.plas{
+  background-color: #9953f1 ;
+  border-radius: 70px;
+  
+}
+.sekil{
+  margin-left: 152px;
+  float: right;
+  margin-right: 13%;
+}
+ul{
+  list-style: none;
+}
 
+.close{
+  height: 20px;
+  width: 20px;
+border-radius: 50%;
+border: 1px solid #858282;
 
+}
 
+ul li{
+  text-align: center;
+  overflow: hidden;
+display: flex;
+box-shadow: 1px 1px 5px gold;
 
+}
+.close{
+  margin-top: 8%;
+}
+.close:hover{
+  background-color: #9953f1;
+}
+.sekil:hover{
+  background-color: yellow;
+}
 
-
-
-
-
+.sekil1{
+  display: none;
+  
+      margin-left: 152px;
+      float: right;
+      margin-right: 13%;
+  
+}
